--- a/_assets/scss/_layout.scss
+++ b/_assets/scss/_layout.scss
@@ -158,12 +158,12 @@ h2 span:nth-child(1) {
     }
 
     .container-main {
-        width: 131%;
+        width: 100%;
     }
 
     .container-main::before {
         //position: relative;
-        width: 120%;
+        width: 100%;
         height: 70%;
     }
 }
@@ -178,7 +178,7 @@ h2 span:nth-child(1) {
     }
 
     .container-main::before {
-        width: 104%;
+        width: 100%;
         height: 66%;
         //position: relative;
         //left: 9em;
@@ -209,6 +209,19 @@ h2 span:nth-child(1) {
         height: 100%;
     }
 
+    .container-main h1,
+    .container-main h2 {
+        top: -1.5em;
+        font-size: 10em;
+
+
+    }
+
+    .container-main h1 {
+
+        left: -10px;
+    }
+
     .container-main {
         width: 100%;
     }
@@ -218,9 +231,23 @@ h2 span:nth-child(1) {
 
     .container-main h1,
     .container-main h2 {
-        font-size: 110px;
-        //right: 2em;
-        top: -3em;
+        font-size: 4em;
+
+
+
+    }
+
+    .container-main::before {
+        height: 55%;
+    }
+
+    .container-main h1 {
+        top: -2em;
+        left: -10px;
+    }
+
+    .container-main h2 {
+        top: -2.1em;
     }
 }
 
@@ -229,14 +256,12 @@ h2 span:nth-child(1) {
         display: none;
     }
 
-    .container-main {
-        width: 137%;
-    }
+    .container-main {}
 
     .container-main::before {
-        width: 180%;
+
         //top: 6.3em;
-        height: 80%;
+
     }
 
     .container-main h1,
@@ -248,18 +273,19 @@ h2 span:nth-child(1) {
 }
 
 @media screen and (max-width: 320px) {
-    .container-main {
-        width: 100%;
-    }
+
 
     .container-main h1,
     .container-main h2 {
-        top: -4em;
+        top: -1.3em;
         font-size: 83px;
+
         //left: -.3em;
     }
 
-    .container-main::before {
-        width: 100%;
+    .container-main::before {}
+
+    .container-main h1 {
+        right: 6px;
     }
 }
