--- a/_assets/scss/_button.scss
+++ b/_assets/scss/_button.scss
@@ -1,139 +1,138 @@
 .me {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
 
+.btn-1 .text__CV {
+  position: relative;
 }
 
 .btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 2em;
-    min-height: 8vh;
-    background-color: #0ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2em;
+  min-height: 8vh;
+  background-color: #0ff;
 }
 
 .btn-1 {
-    position: relative;
-    display: inline-block;
-    padding: 15px 30px;
-    color: #2196f3;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    text-decoration: none;
-    font-size: 24px;
-    overflow: hidden;
-    transition: 0.2s;
+  position: relative;
+  display: inline-block;
+  padding: 15px 30px;
+  color: #2196f3;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  text-decoration: none;
+  font-size: 24px;
+  overflow: hidden;
+  transition: 0.2s;
 }
 
 .btn-1:hover {
-    color: #255784;
-    background-color: #2196f3;
-    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #219621;
-    transition-delay: 1s;
-    border-radius: 2em;
+  color: #255784;
+  background-color: #2196f3;
+  box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #219621;
+  transition-delay: 1s;
+  border-radius: 2em;
 }
 
 .btn-1 span {
-    position: absolute;
+  position: absolute;
 }
 
 .btn-1 span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #219621);
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #219621);
 }
 
 .btn-1:hover span:nth-child(1) {
-    left: 100%;
-    transition: 1s;
+  left: 100%;
+  transition: 1s;
 }
 
 .btn-1 span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #219621);
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #219621);
 }
 
 .btn-1:hover span:nth-child(3) {
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
+  right: 100%;
+  transition: 1s;
+  transition-delay: 0.5s;
 }
 
 .btn-1 span:nth-child(2) {
-    top: -100%;
-    right: 0%;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #219621);
+  top: -100%;
+  right: 0%;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #219621);
 }
 
 .btn-1:hover span:nth-child(2) {
-    top: 100%;
-    transition: 1s;
-    transition-delay: 0.25s;
+  top: 100%;
+  transition: 1s;
+  transition-delay: 0.25s;
 }
 
 .btn-1 span:nth-child(4) {
-    bottom: -100%;
-    left: 0%;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #219621);
+  bottom: -100%;
+  left: 0%;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #219621);
 }
 
 .btn-1:hover span:nth-child(4) {
-    bottom: 100%;
-    transition: 1s;
-    transition-delay: 0.75s;
+  bottom: 100%;
+  transition: 1s;
+  transition-delay: 0.75s;
 }
 
 @media screen and (max-width: 768px) {
-    .btn {}
+  .btn {
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .btn {
-        margin-left: 0em;
-    }
+  .btn {
+    margin-left: 0em;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    .me {}
+  .me {
+  }
 }
 
 @media screen and (max-width: 375px) {
-    .me {
-        padding: 15px;
-    }
+  .me {
+    padding: 15px;
+  }
 
-    .btn {
-
-        padding: 15px;
-    }
+  .btn {
+    padding: 15px;
+  }
 }
 
 @media screen and (max-width: 360px) {
-    .me {
-        margin-left: 0em;
-    }
+  .me {
+    margin-left: 0em;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .me {
-        position: relative;
-
-    }
-
-    .btn {
-        margin-left: 4em;
-    }
+  .me {
+    position: relative;
+  }
 }
