--- a/_assets/scss/_card.scss
+++ b/_assets/scss/_card.scss
@@ -1,283 +1,292 @@
 .container2 {
-    position: relative;
-    width: 1000px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    top: 4em;
-    padding-bottom: 3em;
+  position: relative;
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  top: 4em;
+  padding-bottom: 3em;
 }
 
 .container2 .card {
-    position: relative;
-    height: 250px;
-    background-color: #fff;
-    display: flex;
-    width: 45%;
-    margin: 30px 0;
+  position: relative;
+  height: 250px;
+  background-color: #fff;
+  display: flex;
+  width: 45%;
+  margin: 30px 0;
 }
 
 .container2 .card .imgBx {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 106%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 106%;
+  height: 100%;
 
-    -webkit-box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
-    box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    transition: 0.5s ease-in-out;
+  -webkit-box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
+  box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
 }
 
 .bgr-1 {
-    background: rgba(255, 146, 10, 1);
+  background: rgba(255, 146, 10, 1);
 }
 
 .bgr-2 {
-    background: rgba(84, 255, 82, 1);
+  background: rgba(84, 255, 82, 1);
 }
 
 .bgr-3 {
-    background-color: rgba(169, 3, 41, 1);
+  background-color: rgba(169, 3, 41, 1);
 }
 
 .bgr-4 {
-    background-image: linear-gradient(to right top,
-            #e5ccda,
-            #decae2,
-            #d0cbea,
-            #bcccf0,
-            #a4cff1,
-            #96d3f3,
-            #87d8f2,
-            #7adcee,
-            #71e4f1,
-            #69ecf3,
-            #62f3f3,
-            #5ffbf1);
+  background-image: linear-gradient(to right top,
+      #e5ccda,
+      #decae2,
+      #d0cbea,
+      #bcccf0,
+      #a4cff1,
+      #96d3f3,
+      #87d8f2,
+      #7adcee,
+      #71e4f1,
+      #69ecf3,
+      #62f3f3,
+      #5ffbf1);
 }
 
 .bgr-5 {
-    background-image: linear-gradient(to right top,
-            #0342d1,
-            #7045ca,
-            #9b4dc2,
-            #ba5abb,
-            #d16bb6,
-            #e372ad,
-            #f17ca6,
-            #fb889f,
-            #ff8e8e,
-            #ff977c,
-            #ffa26c,
-            #fbb05f);
+  background-image: linear-gradient(to right top,
+      #0342d1,
+      #7045ca,
+      #9b4dc2,
+      #ba5abb,
+      #d16bb6,
+      #e372ad,
+      #f17ca6,
+      #fb889f,
+      #ff8e8e,
+      #ff977c,
+      #ffa26c,
+      #fbb05f);
 }
 
 .container2 .card:hover .imgBx {
-    width: 150px;
-    height: 150px;
-    left: -83px;
-    top: calc(50% - 75px);
-    transition: 0.5s ease-in-out;
-    background-color: #3498db;
+  width: 150px;
+  height: 150px;
+  left: -83px;
+  top: calc(50% - 75px);
+  transition: 0.5s ease-in-out;
+  background-color: #3498db;
 }
 
 .container2 .card .imgBx::before {
-    content: attr(data-text);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 1.5em;
-    //text-transform: uppercase;
-    background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-weight: 700;
+  content: attr(data-text);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.5em;
+  //text-transform: uppercase;
+  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 700;
 }
 
 .container2 .card .imgBx img {
-    max-width: 169px;
-    transition: 0.5s ease-in-out;
+  max-width: 169px;
+  transition: 0.5s ease-in-out;
 }
 
 .container2 .card:hover .imgBx img {
-    max-width: 75px;
+  max-width: 75px;
 }
 
 .container2 .card .content {
-    position: absolute;
-    right: 0;
-    width: calc(100% - 75px);
-    height: 100%;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 4em;
+  position: absolute;
+  right: 0;
+  width: calc(100% - 75px);
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 4em;
 }
 
 .container2 .card .content h3 {
-    margin-bottom: 5px;
-    font-size: 24px;
+  margin-bottom: 5px;
+  font-size: 24px;
 }
 
 .container2 .card .content a {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 5px 10px;
-    background-color: #333;
-    text-decoration: none;
-    color: #fff;
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #333;
+  text-decoration: none;
+  color: #fff;
 }
 
 @media screen and (width: 1024px) {
-    .container2 .card:hover .imgBx {
-        left: -105px;
-    }
+  .container2 .card:hover .imgBx {
+    left: -105px;
+  }
 }
 
 @media screen and (max-width: 992px) {
-    nav {
-        width: 100%;
-    }
+  nav {
+    width: 100%;
+  }
 
-    .container2 {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        margin: 0px;
-        margin-top: 2em;
-    }
+  .container2 {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+    margin-top: 2em;
+  }
 
-    .container2 .card {
-        width: 400px;
-    }
+  .container2 .card {
+    width: 400px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .container2 {}
+  .container2 {}
 
-    .container2 .card .imgBx {
-        width: 102%;
-    }
+  .container2 .card .imgBx {
+    width: 102%;
+  }
 
-    .container2 .card .imgBx img {
-        max-width: 384px;
-    }
+  .container2 .card .imgBx img {
+    max-width: 384px;
+  }
 
-    .card-images {
-        width: 589px;
-        height: 144px;
-    }
+  .card-images {
+    width: 589px;
+    height: 144px;
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .container2 {
-        z-index: 0;
-        width: 65%;
-        margin: 9px;
-        padding-top: 2em;
-    }
+  .container2 {
+    z-index: 0;
+    width: 65%;
+    margin: 9px;
+    padding-top: 2em;
+  }
 
-    .container2 .card .imgBx {
-        width: 116%;
-    }
+  .container2 .card .imgBx {
+    width: 116%;
+  }
 
-    .container2 .card .imgBx img {
-        width: 13em;
-        height: auto;
-    }
+  .container2 .card .imgBx img {
+    width: 13em;
+    height: auto;
+  }
 
-    /*.container2 .card {
+  /*.container2 .card {
         right: 10em;
     }*/
-    .container2 .card:hover .imgBx {
-        width: 91px;
-        height: 113px;
-        left: -47px;
-    }
+  .container2 .card:hover .imgBx {
+    width: 91px;
+    height: 113px;
+    left: -47px;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    .container2 {
-        width: 91.9%;
-
-    }
+  .container2 {
+    width: 91.9%;
+  }
 }
 
 @media screen and (max-width: 375px) {
-    .container2 {
-        width: 90%;
-        margin-left: 0;
-    }
+  .container2 {
+    width: 90%;
+    margin-left: 0;
+  }
 
-    .container2 .card {
-        width: 348px;
-        margin-right: 0em;
-    }
+  .container2 .card {
+    width: 348px;
+    margin-right: 0em;
+  }
 
-    .container2 .card .imgBx {
-        width: 100%;
-    }
+  .container2 .card .imgBx {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 360px) {
-    .container2 {
-        width: 80%;
-        margin-left: 10em;
-    }
+  .container2 {
+    width: 80%;
+
+  }
+
+  .container2 .card .content {
+
+    left: 0em;
+  }
+
 }
 
 @media screen and (max-width: 320px) {
-    .nav-links {}
+  .nav-links {}
 
-    .container2 {
-        //   background-color: red;
-        width: 90%;
-        margin: 0px;
-    }
+  .content-Text {
+    width: 83%;
+  }
 
-    .container2 .card {
-        max-width: 300px;
-        flex-direction: column;
-        height: auto;
-    }
+  .container2 {
+    //   background-color: red;
+    width: 90%;
+    margin: 0px;
+  }
 
-    .container2 .card .imgBx {
-        position: relative;
-        width: 300px;
-        height: 204px;
-    }
+  .container2 .card {
+    max-width: 300px;
+    flex-direction: column;
+    height: auto;
+  }
 
-    .container2 .card .imgBx,
-    .container2 .card:hover .imgBx {}
+  .container2 .card .imgBx {
+    position: relative;
+    width: 300px;
+    height: 204px;
+  }
 
-    .container2 .card:hover .imgBx {
-        top: calc(50% - 75px);
-        transition: 0.5s ease-in-out;
-        background-color: #3498db;
-        left: -61px;
-    }
+  .container2 .card .imgBx,
+  .container2 .card:hover .imgBx {}
 
-    .container2 .card .imgBx img,
-    .container2 .card:hover .imgBx img {
-        max-width: 260px;
-    }
+  .container2 .card:hover .imgBx {
+    top: calc(50% - 75px);
+    transition: 0.5s ease-in-out;
+    background-color: #3498db;
+    left: -61px;
+  }
 
-    .container2 .card .content {
-        position: relative;
-        width: 100%;
-        top: -14em;
-        left: 39px;
-        padding: 0;
-    }
+  .container2 .card .imgBx img,
+  .container2 .card:hover .imgBx img {
+    max-width: 260px;
+  }
+
+  .container2 .card .content {
+    position: relative;
+    width: 100%;
+    top: -15em;
+    left: 20px;
+    padding: 0;
+  }
 }
