--- a/_assets/scss/_card.scss
+++ b/_assets/scss/_card.scss
@@ -164,7 +164,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  .container2 {}
+  .container2 .card .content {
+    padding: 4px;
+    left: 5em;
+  }
 
   .container2 .card .imgBx {
     width: 102%;
