--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -882,6 +882,10 @@
 }
 
 @media screen and (max-width: 425px) {
+  .site-footer {
+    width: 126.4%;
+  }
+
   .help {
     width: 100%;
   }
@@ -903,14 +907,16 @@
   .section img {
     border: 2px solid rgba(158, 158, 158, 0.4);
     border-radius: 50px;
-    padding: 46px;
+    padding: 23px;
     width: 50px;
     height: 40px;
   }
 }
 
 @media screen and (max-width: 375px) {
-  .site-footer {}
+  .site-footer {
+    width: 120%;
+  }
 
   .footer {
     width: 86%;
@@ -1037,7 +1043,7 @@
 
 @media screen and (max-width: 320px) {
   .site-footer {
-    width: 100%;
+    width: 126%;
   }
 
   .social {
