--- a/_assets/scss/_navigation.scss
+++ b/_assets/scss/_navigation.scss
@@ -54,7 +54,7 @@ nav {
     position: fixed;
     cursor: pointer;
     right: 4%;
-    margin-top: 0.2em;
+    margin-top: 0.5em;
     transform: translate(-5% -50%);
     z-index: 99999;
   }
@@ -68,18 +68,18 @@ nav {
   @include chrome-styles {
     .nav-links {
       clip-path: circle(100px at 90% 50%);
-      -webkit-clip-path: circle(150px at 90% -10%);
+      -webkit-clip-path: circle(90px at 90% -10%);
 
-      //height: 13vh;
-      //width: 100%;
+      //height: 3vh;
+      width: 100%;
       //height: 100%;
     }
 
     .nav-links.open {
 
       clip-path: circle(100px at 90% -7%);
-      -webkit-clip-path: circle(1500px at 90% -20%);
-      height: 138vh;
+      -webkit-clip-path: circle(1200px at 90% -20%);
+      height: 118vh;
       width: 100%;
     }
   }
@@ -162,6 +162,7 @@ nav {
 
   .hamburger {
     z-index: 99999;
+
   }
 
   @mixin chrome-styles {
@@ -225,7 +226,7 @@ nav {
   }
 
   nav {
-    width: 48em;
+    //width: 48em;
   }
 
   @supports (-moz-appearance: none) {
@@ -280,11 +281,11 @@ nav {
   }
 
   nav {
-    width: 26.5em;
+    width: 105%;
   }
 
   .hamburger {
-    right: 2%;
+    right: 4%;
   }
 
   @mixin chrome-styles {
@@ -319,9 +320,7 @@ nav {
 }
 
 @media screen and (max-width: 360px) {
-  body {
-    width: 100%;
-  }
+
 
   .site-nav-header {
     background-color: #00a8ff;
@@ -329,7 +328,7 @@ nav {
   }
 
   nav {
-    width: 100%;
+    width: 119.9%;
   }
 
   .hamburger {
@@ -389,15 +388,16 @@ nav {
       clip-path: circle(1000px at 90% -7%);
       -webkit-clip-path: circle(113px at 90% -10%);
       height: 130vh;
-      //  height: 110vh;
       right: 0em;
+      //  height: 110vh;
+
       //  width: 100%;
     }
 
     .nav-links.open {
       clip-path: circle(2000px at 90% -7%);
       -webkit-clip-path: circle(1003px at 98% 20%);
-      height: 104vh;
+      height: 114vh;
       //width: 100%;
 
     }
