--- a/_assets/scss/_card.scss
+++ b/_assets/scss/_card.scss
@@ -84,6 +84,22 @@
   background-image: linear-gradient(to right top, #0be131, #96c600, #cba700, #eb8500, #f6643e, #f96547, #fc664f, #ff6857, #ff863e, #ffa722, #f5ca00, #d9eb1b);
 }
 
+.bgr-7 {
+  background-image: linear-gradient(to left bottom, #36d62f, #00d592, #00ced9, #00bfff, #00abff, #8e9afd, #d284e2, #fb70b3, #ff7080, #ff834e, #df9c23, #acb317);
+}
+
+.bgr-8 {
+  background-image: linear-gradient(to left bottom, #2f2fd6, #0070fa, #0096ef, #00b4cd, #00cdae, #50cd8e, #7cca6e, #a3c551, #aeaa31, #b48e1a, #b67211, #b35417);
+}
+
+.bgr-9 {
+  background-image: linear-gradient(to left bottom, #2fd653, #49d95d, #5ddd66, #6de06f, #7ce379, #8adb6e, #96d465, #9fcc5d, #a8b743, #afa22d, #b28c1e, #b37617);
+}
+
+.bgr-10 {
+  background-image: linear-gradient(to left bottom, #2f95d6, #00a9de, #00bcd9, #00ccc7, #11daad, #42da9f, #5fda90, #76da82, #63d07f, #4fc77c, #38bd79, #17b376);
+}
+
 .container2 .card:hover .imgBx {
   width: 150px;
   height: 150px;
